# forecastv3

./: .env.example  .gitignore  BUG_CHECK_POST_MORTEM.md  COMPREHENSIVE_BUG_FIX_SUMMARY.md  Dockerfile.railway  Dockerfile.worker  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  MIDDLEWARE_QUICK_REFERENCE.md  MIGRATION_IMPLEMENTATION_PLAN.md  MIGRATION_SUMMARY_2026-01-16.md  PROJECT_RULES.md  RAILWAY_DEPLOYMENT_PLAN.md  RAILWAY_DEPLOYMENT_SOLUTION.md  RAILWAY_POSTGRESQL_MIGRATION_PLAN.md  RAILWAY_POSTGRESQL_STATUS.md  SAP_B1_DATA_RECOMMENDATIONS.md  SAP_MIDDLEWARE_INTEGRATION_GUIDE.md  SESSION_BUG_FIX_SUMMARY.md  STATUS.md  STREAMLIT_FIXES_SUMMARY.md  VERCEL_FRONTEND_MIGRATION_PLAN.md  app.py  config.yaml  config_inventory_optimization.yaml  pyproject.toml  pytest.ini  railway-worker.toml  railway.toml  railway_settings.json  requirements.txt  uom_mapping.yaml
.claude/: settings.local.json
.git-rewrite/: backup-refs  heads  parse  revs
docs/: README.md  consolidation  database  index.md  planning
forecasting_engine/: .dockerignore  Dockerfile  __init__.py  accuracy.py  cli.py  config.py  db.py  extract.py  forecast.py  load.py  orchestrator.py  railway-worker.toml  railway_test_connection.py  requirements.txt  utils.py  worker_start.sh
ingestion_service/: .env.example  .gitignore  README.md  apply_migration_004.py  railway.toml  requirements.txt  setup.py
queries/: Q1.txt  Q2.txt  Q3.txt  analyze_multi_warehouse_item_fixed.sql  items_with_uom.txt  post_consolidation_items.sql  post_consolidation_sales.sql  query2_regional_variants.sql  (+1 more)
scripts/: debug_mv.py  (+21 more)
(+115 files in other folders)
